Bump jol dependency Fixed Sonar issues